--- a/app.json
+++ b/app.json
@@ -39,7 +39,9 @@
 
     ]
   },
-
+  "usingComponents": {
+    "cu-custom": "/colorui/components/cu-custom"
+  },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
 }
